<?xml version="1.0"?>
<package format="2">

  <name>ouster_viz</name>
  <version>0.1.0</version>
  <description>ouster client</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>ouster_client</depend>

</package>
